Bug #19492 --binlog-do-db option cuases tables create issues for ndb master - ndb system tables not created because of filter, moved chack of filter